--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                     <img src="img/logo.png" alt="" height="">
                 </div>
                 <ul id="nav_list">
-                    <li><a href="#Our Story" id="nav_item_1">1.Our Story</a></li>
-                    <li><a href="#Products" id="nav_item_2">2.Products</a></li>
-                    <li><a href="#Journal" id="nav_item_3">3.Journal</a></li>
-                    <li><a href="#Contact" id="nav_item_4">4.Contact</a></li>
+                    <li><a href="#Our Story" id="nav_item_1">Our Story</a></li>
+                    <li><a href="#Products" id="nav_item_2">Products</a></li>
+                    <li><a href="#Journal" id="nav_item_3">Journal</a></li>
+                    <li><a href="#Contact" id="nav_item_4">Contact</a></li>
                 </ul>   
             </nav>
            
